--- a/2.3_ACM.Rmd
+++ b/2.3_ACM.Rmd
@@ -304,9 +304,8 @@ Nombre de journées enfant par département
 ACMcarte <- ACM_colo_dep %>% slice(10) %>% pivot_longer(-1) %>% bind_cols(INSEE_DEP=c('BFC','21','25','39','58','70','71','89','90','FR'))
 ACMcarte <- sp::merge(depwgs,ACMcarte,by="INSEE_DEP")
 
-leaflet(ACMcarte) %>% addProviderTiles(providers$CartoDB.Positron) %>% 
-  setView(lng = 5.1, lat = 47.27, zoom = 8) %>%
-  addPolygons(data=dep27carto,group  = "départements",fill = F,color="#9370DB",weight = 3 ,opacity = 1, smoothFactor = 2) %>%
+leaflet(ACMcarte) %>% 
+    contour_depbfc() %>%
   addCircles(centroid(ACMcarte)[,1],centroid(ACMcarte)[,2],
              radius = ~100*value^(1/2), weight=4,
              color = "#4169E1", opacity = 0.8,
