--- a/1.2_structure.Rmd
+++ b/1.2_structure.Rmd
@@ -81,14 +81,10 @@ hchart( region %>%
 ### Carte régionale
 ```{r}
 leaflet(regwgs) %>%  
-  addProviderTiles(providers$CartoDB.Positron) %>%
-  setView(lng = 5.1, lat = 47.27, zoom = 6) %>%
   addPolygons(fillColor = ~pal(ind_jeun), fillOpacity = 0.7,
               color = "#2F4F4F", weight = 2,opacity = 0.6, 
               smoothFactor = 2 ) %>% 
-  addPolygons(data=reg27carto,group  = "BFC",
-              color="#9370DB",weight = 5,opacity = 1, 
-              fill = F, smoothFactor = 5) %>%
+    contour_bfc() %>%
    addCircles(centroid(regwgs)[,1],centroid(regwgs)[,2],
              radius = ~100*p1529^(1/2), 
              color = "#4169E1", weight=4,
@@ -170,17 +166,10 @@ hchart( departement %>%
 ### Carte départementale
 ```{r}
 leaflet(depwgs) %>% 
-  addProviderTiles(providers$CartoDB.Positron) %>%
-  setView(lng = 5.1, lat = 47.27, zoom = 6) %>%
   addPolygons(fillColor = ~pal(ind_jeun), fillOpacity = 0.7,
               color = "#2F4F4F",weight = 2,opacity = 0.6, 
               smoothFactor = 2 ) %>%
-  addPolygons(data=reg27carto,group  = "BFC",
-              color="#9370DB",weight = 5,opacity = 1, 
-              fill = F, smoothFactor = 5) %>%
-  addPolygons(data=dep27carto,group  = "départements",
-              color="#9370DB",weight = 3,opacity = 1, 
-              fill = F, smoothFactor = 5) %>%
+    contour_depbfc(zoom = 6) %>%
    addCircles(centroid(depwgs)[,1],centroid(depwgs)[,2],
              radius = ~100*p1529^(1/2), 
              color = "#4169E1",weight=4,
@@ -238,17 +227,10 @@ epci27_tab %>%
 ### Carte ECPI
 ```{r}
 leaflet(epcicarto) %>% 
-  addProviderTiles(providers$CartoDB.Positron) %>%
-  setView(lng = 5.1, lat = 47.27, zoom = 8) %>%
   addPolygons(fillColor = ~pal(ind_jeun),  fillOpacity = 0.7,
-               color = "#2F4F4F", weight = 1,opacity = 0.6 ) %>%
-  addPolygons(data=reg27carto,group  = "BFC",
-              color="#9370DB",weight = 5,opacity = 1, 
-              fill = F, smoothFactor = 5) %>%
-  addPolygons(data=dep27carto,group  = "départements",
-              color="#9370DB",weight = 3,opacity = 1, 
-              fill = F, smoothFactor = 5) %>%
-     addCircles(centroid(epcicarto)[,1],centroid(epcicarto)[,2],
+               color = "#2F4F4F", weight = 2,opacity = 0.6 ) %>%
+    contour_depbfc() %>%
+  addCircles(centroid(epcicarto)[,1],centroid(epcicarto)[,2],
              radius = ~100*p1529^(1/2), 
              color = "#4169E1",weight=4,
              fillColor = ~pal2(prop1529), fillOpacity = 0.7,
@@ -306,16 +288,9 @@ bv27_tab %>%
 ### Carte BV
 ```{r}
 leaflet(bvcarto) %>% 
-  addProviderTiles(providers$CartoDB.Positron) %>%
-  setView(lng = 5.1, lat = 47.27, zoom = 8) %>%
   addPolygons(fillColor = ~pal(ind_jeun), fillOpacity = 0.7 ,
-              color = "#2F4F4F",weight = 1,opacity = 0.6 ) %>%
-  addPolygons(data=reg27carto,group  = "BFC",
-              color="#9370DB",weight = 5,opacity = 1, 
-              fill = F, smoothFactor = 5) %>%
-  addPolygons(data=dep27carto,group  = "départements",
-              color="#9370DB",weight = 3,opacity = 1, 
-              fill = F, smoothFactor = 5) %>%
+              color = "#2F4F4F",weight = 2,opacity = 0.6 ) %>%
+    contour_depbfc() %>%
   addCircles(centroid(bvcarto)[,1],centroid(bvcarto)[,2],
              radius = 100*bvcarto$p1529^(1/2), 
              color = "#4169E1", opacity = 0.8, weight=4,
