--- a/1.3_evol.Rmd
+++ b/1.3_evol.Rmd
@@ -74,13 +74,9 @@ region_tab %>%
 ```{r,echo=F}
 
 leaflet(regwgs) %>%  
-  addProviderTiles(providers$CartoDB.Positron) %>%
-  setView(lng = 5.1, lat = 47.27, zoom = 6) %>%
   addPolygons(color = "#2F4F4F", weight = 2,opacity = 0.6,
               fill =F, smoothFactor = 2 ) %>%
-  addPolygons(data=reg27carto,group  = "BFC",
-              color="#9370DB",weight = 5,opacity = 1, 
-              fill = F, smoothFactor = 5) %>%
+    contour_bfc() %>%
   addCircles(centroid(regwgs)[,1],centroid(regwgs)[,2],weight=4,
              radius = ~50*pop^(1/2), color = "#4169E1",
              fillColor = ~pal3(evol), fillOpacity = 0.7,
@@ -147,16 +143,9 @@ as.data.frame(dep27_tab) %>%
 ```{r,echo=F}
 
 leaflet(depwgs) %>%  
-  addProviderTiles(providers$CartoDB.Positron) %>%
-  setView(lng = 5.1, lat = 47.27, zoom = 6) %>%
   addPolygons(color = "#2F4F4F", weight = 2,opacity = 0.6,
              fill =F , smoothFactor = 2 )%>%
-  addPolygons(data=reg27carto,group  = "BFC",
-              color="#9370DB",weight = 5,opacity = 1, 
-              fill = F, smoothFactor = 5) %>%
-  addPolygons(data=dep27carto,group  = "départements",
-              color="#9370DB",weight = 3,opacity = 1, 
-              fill = F,  smoothFactor = 5) %>%
+    contour_depbfc(zoom = 6) %>%
   addCircles(centroid(depwgs)[,1],centroid(depwgs)[,2],weight=4,
              radius = ~50*pop^(1/2), color = "#4169E1",
              fillColor = ~pal3(evol), fillOpacity = 0.7,
@@ -217,16 +206,9 @@ epci27_tab %>%
 ```{r,echo=F}
 
 leaflet(epcicarto) %>%  
-  addProviderTiles(providers$CartoDB.Positron) %>%
-  setView(lng = 5.1, lat = 47.27, zoom = 8) %>%
   addPolygons(color = "#2F4F4F", weight = 2,opacity = 0.6,
              fill =F ) %>%
-  addPolygons(data=reg27carto,group  = "BFC",
-              color="#9370DB",weight = 5,opacity = 1, 
-              fill = F, smoothFactor = 5) %>%
-  addPolygons(data=dep27carto,group  = "départements",
-              color="#9370DB",weight = 3,opacity = 1, 
-              fill = F, smoothFactor = 5) %>%
+    contour_depbfc() %>%
   addCircles(centroid(epcicarto)[,1],centroid(epcicarto)[,2],
              radius = ~50*pop^(1/2), 
              color = "#4169E1", weight = 4,
@@ -286,16 +268,9 @@ bv27_tab %>%
 ```{r,echo=F}
 
 leaflet(bvcarto) %>%  
-  addProviderTiles(providers$CartoDB.Positron) %>%
-  setView(lng = 5.1, lat = 47.27, zoom = 8) %>%
   addPolygons(color = "#2F4F4F", weight = 2,opacity = 0.6,
                fill =F ) %>%
-  addPolygons(data=reg27carto,group  = "BFC",
-              color="#9370DB",weight = 5,opacity = 1, 
-              fill = F, smoothFactor = 5) %>%
-  addPolygons(data=dep27carto,group  = "départements",
-              color="#9370DB",weight = 3,opacity = 1, 
-              fill = F, smoothFactor = 5) %>%
+    contour_depbfc() %>%
   addCircles(centroid(bvcarto)[,1],centroid(bvcarto)[,2],
              radius = ~50*pop^(1/2),
              color = "#4169E1", weight = 4,
