--- a/5.4_piscines.Rmd
+++ b/5.4_piscines.Rmd
@@ -250,13 +250,9 @@ piscinesdep <- sp::merge(depwgs,piscines %>%
                          by="INSEE_DEP")
 
 leaflet(piscinesdep) %>%
-  addProviderTiles(providers$CartoDB.Positron) %>% 
-  setView(lng = 5.1, lat = 47.27, zoom = 6) %>%
   addPolygons(color = "#2F4F4F", weight=2,opacity = 0.6, smoothFactor = 2,
               fill=T, fillColor = ~pal(tranche), fillOpacity = 0.8  ) %>%
-  addPolygons(data=reg27carto,group  = "BFC",
-              color="#9370DB",weight = 5, opacity = 1, 
-             fill = F, smoothFactor = 5) %>%
+    contour_depbfc(zoom = 6) %>%
   addCircles(centroid(piscinesdep)[,1],centroid(piscinesdep)[,2],
              group = "region", 
              radius=~5000*nbpiscines^(1/2),
@@ -351,8 +347,6 @@ piscinesepci <- sp::merge(epciwgs,piscines %>%
                           by="CODE_EPCI")
 
 leaflet(piscinesepci) %>%
-  addProviderTiles(providers$CartoDB.Positron) %>% 
-  setView(lng = 5.1, lat = 47.27, zoom = 8) %>%
   addAwesomeMarkers(data=bassins,icon=icons,
                     popup = popupTable(bassins,row.numbers = F,feature.id = F),
                     group = "tous bassins") %>%
@@ -362,12 +356,7 @@ leaflet(piscinesepci) %>%
                                    select(EPCI=NOM,pop,nbpiscines,
                                           nbpiscines_couv,nbpisc_saison,surfnat,tranche),
                                  feature.id=F,row.numbers = F)) %>%
-  addPolygons(data=reg27carto,group  = "BFC",
-              color="#9370DB",weight = 5,opacity = 1, 
-              fill = F, smoothFactor = 5) %>%
-  addPolygons(data=dep27carto,group  = "départements",
-              color="#9370DB",weight = 3,opacity = 1, 
-              fill = F, smoothFactor = 2) %>%
+    contour_depbfc() %>%
   addCircles(centroid(piscinesepci)[,1],centroid(piscinesepci)[,2],
              group = "region", 
              radius=~5000*nbpiscines^(1/2),
@@ -461,8 +450,6 @@ piscinesbv <- sp::merge(bvwgs,piscines %>%
                         by="BV2012")
 
 leaflet(piscinesbv) %>%
-  addProviderTiles(providers$CartoDB.Positron) %>% 
-  setView(lng = 5.1, lat = 47.27, zoom = 8) %>%
   addAwesomeMarkers(data=bassins,icon=icons,
                     popup = popupTable(bassins,row.numbers = F,feature.id = F),
                     group = "tous bassins") %>%
@@ -472,12 +459,7 @@ leaflet(piscinesbv) %>%
                                    select(BV2012 ,pop,nbpiscines,nbpiscines_couv,
                                           nbpisc_saison,surfnat,tranche),
                                  feature.id=F,row.numbers = F))   %>%
-  addPolygons(data=reg27carto,group  = "BFC",
-              color="#9370DB",weight = 5,opacity = 1, 
-              fill = F, smoothFactor = 5) %>%
-  addPolygons(data=dep27carto,group  = "départements",
-              color="#9370DB",weight = 3,opacity = 1, 
-              fill = F, smoothFactor = 2) %>%
+    contour_depbfc() %>%
   addCircles(centroid(piscinesbv)[,1],centroid(piscinesbv)[,2],
              group = "region", 
              radius=~5000*nbpiscines^(1/2),
