--- a/5.5_RES.Rmd
+++ b/5.5_RES.Rmd
@@ -206,8 +206,6 @@ res <- equip %>%
 res <- sp::merge(regwgs,res,by="INSEE_REG")
   
 leaflet(res) %>%   
-  addProviderTiles(providers$CartoDB.Positron) %>% 
-  setView(lng = 5.1, lat = 47.27, zoom = 6) %>%
   addPolygons(color = "#2F4F4F",  weight = 2, opacity = 0.6,
               fillColor = ~pal(txequi),  fillOpacity = 0.6,
               fill = TRUE ,smoothFactor = 2,
@@ -281,9 +279,7 @@ leaflet(res) %>%
                        colorPalette = coul,
                        width = sqrt(res$equ) ,
                        opacity = 0.6) %>% syncWith("minicharts") %>%
-    addPolygons(data=reg27carto,group  = "BFC",
-                color="#9370DB",weight = 5, opacity = 1, 
-                fill = F, smoothFactor = 5) %>%
+    contour_bfc() %>%
   addLayersControl( baseGroups = c("taux équi/10 000 hab","taux structurant/50 000hab",
                                    "taux grands jeux/50 000hab","taux proxi/50 000hab", 
                                    "taux bassins/400 000hab"),
@@ -562,8 +558,6 @@ res <- equip %>%
 res <- sp::merge(depwgs,res,by="INSEE_DEP")
   
 leaflet(res) %>%  
-  addProviderTiles(providers$CartoDB.Positron) %>% 
-  setView(lng = 5.1, lat = 47.27, zoom = 6) %>%
   addPolygons(color = "#2F4F4F", weight = 2, opacity = 0.6, 
               fillColor = ~pal(txequi),fillOpacity = 0.6,
               fill = TRUE,   smoothFactor = 2,
@@ -637,9 +631,7 @@ leaflet(res) %>%
                        colorPalette = coul,
                        width = sqrt(res$equ) ,
                        opacity = 0.6 ) %>%
-    addPolygons(data=reg27carto,group  = "BFC",
-                color="#9370DB",weight = 5, opacity = 1, 
-                fill = F, smoothFactor = 5) %>%
+    contour_depbfc(zoom = 6) %>%
   addLayersControl( baseGroups = c("taux équi/10 000 hab","taux structurant/50 000hab",
                                    "taux grands jeux/50 000hab","taux proxi/50 000hab", 
                                    "taux bassins/400 000hab"),
@@ -810,8 +802,6 @@ res <- equip %>%
 res <- sp::merge(epcicarto,res,by="CODE_EPCI")
   
 leaflet(res) %>%   
-  addProviderTiles(providers$CartoDB.Positron) %>% 
-  setView(lng = 5.1, lat = 47.27, zoom = 8) %>%
   addPolygons(color = "#2F4F4F", weight = 2, opacity = 0.6,
               fillColor = ~pal(txequi),fillOpacity = 0.6,
               fill = TRUE,  smoothFactor = 2,
@@ -885,9 +875,7 @@ leaflet(res) %>%
                        colorPalette = coul,
                        width = sqrt(10*res$equ) ,
                        opacity = 0.7 ) %>%
-    addPolygons(data=reg27carto,group  = "BFC",
-                color="#9370DB",weight = 5, opacity = 1, 
-                fill = F, smoothFactor = 5) %>%
+    contour_depbfc() %>%
   addLayersControl(baseGroups = c("taux équi/10 000 hab","taux structurant/50 000hab",
                                   "taux grands jeux/50 000hab","taux proxi/50 000hab", 
                                   "taux bassins/400 000hab"),
@@ -1052,8 +1040,6 @@ res <- equip %>%
 res <- sp::merge(bvcarto,res,by="BV2012")
   
 leaflet(res) %>% 
-  addProviderTiles(providers$CartoDB.Positron) %>% 
-  setView(lng = 5.1, lat = 47.27, zoom = 8) %>%
   addPolygons(color = "#2F4F4F", weight = 2, opacity = 0.6, 
               fillColor = ~pal(txequi),fillOpacity = 0.6,
               fill = TRUE,  smoothFactor = 2,
@@ -1127,9 +1113,7 @@ leaflet(res) %>%
                        colorPalette = coul,
                        width = sqrt(10*res$equ) ,
                        opacity = 0.7 ) %>%
-    addPolygons(data=reg27carto,group  = "BFC",
-                color="#9370DB",weight = 5, opacity = 1, 
-                fill = F, smoothFactor = 5) %>%
+    contour_depbfc() %>%
   addLayersControl(baseGroups = c("taux équi/10 000 hab","taux structurant/50 000hab",
                                   "taux grands jeux/50 000hab","taux proxi/50 000hab", 
                                   "taux bassins/400 000hab"),
